# size-scanner

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/size_scanner/: __init__.py  __main__.py  core.py  helpers.py
